clean up css/ fix horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,71 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 
 html {
-    display: grid;
-    justify-content: center;
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 body {
     display: grid;
+    justify-items: center;
     grid-template-columns: 1fr;
     font-family: 'Open Sans', sans-serif;
-    max-width: 1024px;
+    width: calc(100vw - (100vw - 100%));
     margin: 0;
+    padding: 0;
 }
 
-nav {
-    position: fixed;
-    display: none;
-    flex-direction: column;
+/** nav-styling **/
+
+.navbar {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(222px, 1fr));
+    background: #35475d;
+    width: 100%;
 }
 
-main {
-    max-width: 700px;
-    justify-self: center;
+.nav-header {
+    grid-column: 1 / -1;
+    padding: .25rem;
+    color: #61dafb;
+}
+.nav-logo {
+    color: inherit;
+}
+
+.nav-link {
+    color: inherit;
+    text-decoration: none;
+    padding: .25rem .5rem;
+    margin: 1px;
+    background: #56bcd8;
+}
+.nav-link:hover {
+    background: #61dafb;
+}
+
+/** body-styling **/
+
+.main-section-title {
+    margin: 1rem .5rem;
+    font-size: 2rem;
+    color: #35475d;
+}
+
+.body-title {
+    margin: 2rem .5rem;
+    color: #35475d;
+}
+
+.body-txt, ol {
+    max-width: 600px;
+    margin-left: .25rem;
+}
+
+.body-link {
+    background: #53bedb47;
 }
 
 code {
@@ -31,38 +75,28 @@ code {
     color: #fff;
     padding: 1rem 3rem;
     margin: .5rem 0;
+    word-break: break-word;
 }
 
-.main-section {
-    display: grid;
-    justify-content: center;
-}
-
-.main-section-title {
-    margin: 1rem .5rem;
-}
-
-.body-title {
-    margin: 2rem .5rem;
-}
-
-.body-txt {
-    max-width: 600px;
-}
-
-@media only screen and (min-width: 410px) {
+@media only screen and (min-width: 500px) {
     code {
         border-radius: 1rem;
     }
+    main {
+        margin: 0 .5rem;
+    }
 }
 
-@media only screen and (min-width: 550px) {
+@media only screen and (min-width: 650px) {
     body {
         grid-template-columns: 250px 1fr;
     }
-    nav {
+    .navbar {
         position: fixed;
         display: flex;
+        flex-direction: column;
+        height: 100vh;
+        width: 250px;
     }
     main {
         grid-column: 2;
@@ -79,6 +113,6 @@ code {
 .code-comments { color: #226d22 }
 .code-number { color: #b0c880; }
 
-.highlight { background: lightyellow; }
+.highlight { background: #dafb58; }
 
 .bold { font-weight: bold }
